--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,10 @@
 :root {
-  --color-light: #e5d8bf;
+  --color-light: #fff;
   --color-dark: #1c1c20;
-  --color-primary: #091d36;
+  --color-primary: #2a7baa;
   --color-secondary: #394d79;
+  --color-com: #d55252;
+
   --font-primary: 'Poppins', sans-serif;
   --font-weight: 300;
   --font-size: 16px;
@@ -15,11 +17,9 @@
 body {
   margin: 0;
   font-family: var(--font-primary);
+  font-weight: var(--font-weight);
+  background-color: var(--color-primary);
+  color: var(--color-light);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
