--- a/src/styles/componets/DragImage.scss
+++ b/src/styles/componets/DragImage.scss
@@ -11,14 +11,13 @@ input[type='file'] {
 		color: var(--color-light);
 		margin-bottom: 10px;
 	}
-	&__message {
+	&__mesagge {
 		margin: 20px 0;
 		padding: 10px 20px;
 		border-radius: 5px;
 		background-color: var(--color-light);
 		text-transform: uppercase;
 		color: var(--color-com);
-		transition: display 0.5s ease-in;
 	}
 	&__image {
 		cursor: pointer;
@@ -63,9 +62,16 @@ input[type='file'] {
 		border-radius: 5px;
 		background-color: var(color-primary);
 		text-transform: uppercase;
-		transition: backgroundColor 0.4s ease-in;
+		transition: 0.2s ease-in;
 		&:hover {
-			background-color: lighten($color: #6b6b6b, $amount: 5);
+			transform: scale(1.11);
+			transition: 0.2s ease;
+			background-color: var(--color-primary);
+			box-shadow: 0 0px 24px hsla(var(--hue), var(--sat), var(--lig), .25);
+			color: var(--color-light);
+		}
+		&:active {
+			transform: scale(.9);
 		}
 	}
 }
